--- a/help/003.md
+++ b/help/003.md
@@ -1,4 +1,9 @@
-How to enable Two-Factor Authentication (2FA) for my account?
+<!-- 
+---
+title: FIXME 003
+--- 
+-->
+
 ## **How to enable Two-Factor Authentication (2FA) for my account?**
 
 <br />
