--- a/help/004.md
+++ b/help/004.md
@@ -1,4 +1,9 @@
-How to set up Authenticator on Apple Watch?
+<!-- 
+---
+title: FIXME 004
+--- 
+-->
+
 ## **How to set up Authenticator on Apple Watch?**
 
 <br />
