--- a/help/005.md
+++ b/help/005.md
@@ -1,4 +1,9 @@
-How to restore/synchronize my accounts on a new device?
+<!-- 
+---
+title: FIXME 005
+--- 
+-->
+
 ## **How to restore/synchronize my accounts on a new device?**
 
 <br />
