--- a/help/006.md
+++ b/help/006.md
@@ -1,4 +1,9 @@
-I forgot my password, how do I reset it?
+<!-- 
+---
+title: FIXME 006
+--- 
+-->
+
 ## **I forgot my password, how do I reset it?**
 
 <br />
