--- a/help/015.md
+++ b/help/015.md
@@ -1,4 +1,9 @@
-Having trouble with synchronization?
+<!-- 
+---
+title: FIXME 015
+--- 
+-->
+
 ## **Having trouble with synchronization?**
 
 <br />
