--- a/help/macOS/008.md
+++ b/help/macOS/008.md
@@ -1,4 +1,8 @@
-I am getting the "Not Authenticated" message.
+<!-- 
+---
+title: FIXME 008
+--- 
+-->
 
 ## **I am getting the "Not Authenticated" message.**
 
