--- a/help/macOS/011.md
+++ b/help/macOS/011.md
@@ -1,4 +1,8 @@
-How to set up Unlock with Apple Watch?
+<!-- 
+---
+title: FIXME 011
+--- 
+-->
 
 ## **How to set up **Unlock with Apple Watch?****
 
