--- a/help/macOS/012.md
+++ b/help/macOS/012.md
@@ -1,4 +1,8 @@
-How to set up Open Authenticator Automatically when you log in on Mac?
+<!-- 
+---
+title: FIXME 012
+--- 
+-->
 
 ## **How to **Open Authenticator Automatically** when you log in on your Mac?**
 
