--- a/help/macOS/008.md
+++ b/help/macOS/008.md
@@ -19,12 +19,12 @@ You can enable the iCloud Drive on your Mac by following these steps:
 *3. Sign in with your **Apple ID**, if you need to.*
 *4. Select **iCloud Drive**.*
 
-<img src="../../../Help/macOS/Assets/008_1.png">
+<img src="./Assets/008_1.png">
 
 *5. Press **Options**.*
 
-<img src="../../../Help/macOS/Assets/008_2.png">
+<img src="./Assets/008_2.png">
 
 *6. Select **Authenticator**.*
 
-<img src="../../../Help/macOS/Assets/008_3.png">
+<img src="./Assets/008_3.png">
