--- a/help/iOS/008.md
+++ b/help/iOS/008.md
@@ -19,7 +19,7 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 *3. Turn on **iCloud Drive**.*
 
 <p align="center">
-<img src="../help/iOS/Assets/008_1.png" style="width:320px;"/>
+<img src="./Assets/008_1.png" style="width:320px;"/>
 </p>
 
 <br />
@@ -28,5 +28,5 @@ You can enable the iCloud Drive on your iPhone and iPad by following these steps
 *4. Turn on **Authenticator**.*
 
 <p align="center">
-<img src="../help/iOS/Assets/008_2.png" style="width:320px;"/>
+<img src="./Assets/008_2.png" style="width:320px;"/>
 </p>
