--- a/help/iOS/013.md
+++ b/help/iOS/013.md
@@ -18,13 +18,13 @@ With Authenticator widget, you can access your 2FA codes even faster. To create 
 *4. Scroll down to select **Authenticator**.*
 *5. Choose the widget size, tap **Add Widget**.*
 <br />
-<img src="../Help/iOS/Assets/help-iOS-1.png">
+<img src="./Assets/help-iOS-1.png">
 <br />
 *6. Tap on the recently added Authenticator widget.*
 *7. Choose the two-factor authentication accounts that you want to be included in Authenticator Widget.*
 *8. Finally, tap outside of the Authenticator widget to exit and then press on **Done** to finish the process.*
 <br />
-<img src="../Help/iOS/Assets/help-iOS-2.png">
+<img src="./Assets/help-iOS-2.png">
 <br />
 <br />
 
