--- a/help/macOS/013.md
+++ b/help/macOS/013.md
@@ -16,18 +16,18 @@ With Authenticator widget, you can access your 2FA codes even faster. To create 
 *2. Click the date or time in the menu bar to open **Notification Center**.*
 *3. Scroll to the bottom of **Notification Center**, then click **Edit Widgets**.*
 
-<img src="../../../Help/macOS/Assets/help-macOS-1.png">
+<img src="./Assets/help-macOS-1.png">
 
 *4. Search and select **Authenticator** from the left side of the screen.*
 *5. Choose from two widget sizes, then click the add button **"+"** in the corner of any widget. If you want, you can also drag & drop the widget into the Notification Center.*
 *6. Click on the recently added Authenticator widget to choose the two-factor authenticator accounts that you want to be included in the widget.*
 
-<img src="../../../Help/macOS/Assets/help-macOS-2.png">
+<img src="./Assets/help-macOS-2.png">
 
 *7. Now, you’ll be able to personalize the widget to your preferences. Click the **Choose** option, then search or select the accounts you want to add. Click the **Done** button when you're finished.*
 
-<img src="../../../Help/macOS/Assets/help-macOS-3.png">
-<img src="../../../Help/macOS/Assets/help-macOS-4.png">
+<img src="./Assets/help-macOS-3.png">
+<img src="./Assets/help-macOS-4.png">
 
 <br />
 
