--- a/help/macOS/012.md
+++ b/help/macOS/012.md
@@ -14,9 +14,4 @@ You can set up Authenticator to open automatically whenever you log in to your M
 *2. Select your user account, then click **Login Items** at the top of the window.*
 *3. Click the Add button **+** below the list of items, select **Authenticator**, then click Add.*
 
-More information on how to **Open items automatically when you log in on Mac** on the below link: https://support.apple.com/en-gb/guide/mac-help/mh15189/mac.
-
-
-
-
-
+More information on how to **Open items automatically when you log in on Mac** on the below [**link**](https://support.apple.com/en-gb/guide/mac-help/mh15189/mac).
