--- a/help/010.md
+++ b/help/010.md
@@ -10,7 +10,7 @@ title: How to cancel my subscription?
 
 We are sad to see that you have decided to leave. With our app, you can synchronize all your two-factor authentication codes between all your Apple devices including Apple Watch. You have the possibility to import your 2FA codes from Google Authenticator, add widgets on your lock screen, and securely restore and back up your data on your iCloud in encrypted form. Finally, we put our users' security and privacy first, we don't have access to the accounts you store or the password you choose to encrypt your data.
 
-We recommend you to set up two-factor authentication and secure one of your accounts with our app, and you will get surprised by how fast and secure it is. With our app, you can add an extra layer of security for your accounts like Twitter, Instagram, Facebook, PayPal, Twitch, and any other service that provides two-factor authentication. Even, if someone knows your password they still need the code from Authenticator to access your account. More information on how to enable 2FA for your accounts is on the below link:  (https://authenticator.2stable.com/2fa-guides/) .
+We recommend you to set up two-factor authentication and secure one of your accounts with our app, and you will get surprised by how fast and secure it is. With our app, you can add an extra layer of security for your accounts like Twitter, Instagram, Facebook, PayPal, Twitch, and any other service that provides two-factor authentication. Even, if someone knows your password they still need the code from Authenticator to access your account. More information on how to enable 2FA for your accounts is on the below [**link**](https://authenticator.2stable.com/2fa-guides/).
 
 <br />
 
