--- a/help/macOS/011.md
+++ b/help/macOS/011.md
@@ -4,7 +4,7 @@ title: How to set up **Unlock with Apple Watch?
 --- 
 -->
 
-## ***How to set up **Unlock with Apple Watch?***
+## *How to set up **Unlock with Apple Watch?***
 
 <br />
 
