--- a/help/001.md
+++ b/help/001.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: FIXME
+title: What's an Authentication App?
 --- 
 -->
 
-## **FIX ME**
+## **What's an Authentication App?**
 
 <br />
 
