--- a/help/001.md
+++ b/help/001.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: What's an Authentication App?
+title: What is an Authentication App?
 --- 
 -->
 
-## **What's an Authentication App?**
+## **Authentication App**
 
 <br />
 
