--- a/help/001.md
+++ b/help/001.md
@@ -1,10 +1,10 @@
 <!-- 
 ---
-title: What is an Authentication App?
+title: Authentication App
 --- 
 -->
 
-## **Authentication App**
+## **Authentication**
 
 <br />
 
