--- a/help/001.md
+++ b/help/001.md
@@ -8,7 +8,7 @@ title: Authentication App
 
 <br />
 
-**Authenticator** is an app that generates secure two-factor authentication (2FA) codes for your accounts. When you set up your account with two-factor authentication (2FA), you will receive a secret key to enter into the **Authenticator**, usually the key is in a QR code form. 
+**Authenticator is an app that generates secure two-factor authentication (2FA) codes for your accounts. When you set up your account with two-factor authentication (2FA), you will receive a secret key to enter into the **Authenticator**, usually the key is in a QR code form.** 
 
 <br />
 
