--- a/help/iOS/018.md
+++ b/help/iOS/018.md
@@ -7,8 +7,8 @@ title: Authenticator App Crashing on Mac?
 
 <br />
 
-If the Authenticator App crashes or fails to launch after restoring, syncing, or transferring to your Mac, please contact our support team immediately for assistance.
+If the Authenticator App crashes or fails to launch after restoring, syncing, or transferring to your Mac, please contact our support team for assistance.
 
-We'll diagnose the issue and guide you through the steps to get the app running smoothly on your Mac.
+We'll review the issue and guide you through the steps to get the app running smoothly on your Mac.
 
 [**Contact Us**](authenticator://contact?subject=Having%20trouble%20with%20synchronization%3F)
