--- a/help/iOS/018.md
+++ b/help/iOS/018.md
@@ -7,8 +7,6 @@ title: Authenticator App Crashing on Mac?
 
 <br />
 
-If the Authenticator App crashes or fails to launch after restoring, syncing, or transferring to your Mac, please contact our support team immediately for assistance.
-
-We'll diagnose the issue and guide you through the steps to get the app running smoothly on your Mac.
+If the Authenticator App crashes or fails to launch after restoring, syncing, or transferring to your Mac, please get in touch with our support team for further assistance through the next steps to get the Authenticator App running smoothly.
 
 [**Contact Us**](authenticator://contact?subject=Having%20trouble%20with%20synchronization%3F)
