--- a/help/iOS/018.md
+++ b/help/iOS/018.md
@@ -7,6 +7,6 @@ title: Authenticator App Crashing on Mac?
 
 <br />
 
-When attempting to restore, synchronize, or transfer your Authenticator App to your Mac, the app crashes and fails to launch. Please reach out to our support team. We'll promptly investigate the issue and assist you in getting the app running smoothly on your Mac
+If when attempting to restore, synchronize, or transfer your Authenticator App to your Mac, the app crashes and fails to launch. please reach out to our support team. We'll promptly assess your case and assist you in getting the app running smoothly on your Mac
 
 [**Contact Us**](authenticator://contact?subject=Having%20trouble%20with%20synchronization%3F)
